--- a/Society_News.html
+++ b/Society_News.html
@@ -73,6 +73,117 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>2022 Exhibit Addendum: Arthur F. Tait, Artist</h2>
+      <hr>
+      <h5>August 26, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_09.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>As many of you know, the Historical Society’s summer exhibit, “Early Chateaugay Lake”, is currently on display each Wednesday and Saturday morning from 9:00am until noon in the Archival Center in the Town Hall. We have been gratified by the large numbers of folks who have stopped in and offered kind words for our efforts.</p>
+
+<p>We have covered several topics, including: the Natural History of the Lakes, the Native American presence on the Sand Bar and Indian Point, Early Schools, Early Transportation Development, The Bellows House (later the Banner House), the Earliest Settlers and more.</p>
+
+<p>One of the larger parts of the display are the paintings and lithographs of scenes captured by Arthur Fitzwilliam Tait that are set in the area around the Upper and Lower Lakes (see the first photo above).</p>
+
+<p>Tait did hundreds of paintings throughout his long career. Many were done when he was a guest at the Bellows House (later the Banner House) each summer from 1851 to 1855. The seven shown in our exhibit were always identified as being set in the Lakes area.</p> 
+
+<p>As shown in the exhibit and in the photo, they are from left to right: “A Second Shot: Still Hunting in the First Snow in the Chateaugay Forest” (lithograph below it), “A Tight Fix” (lithograph below it), “Arguing the Point—Settling the Presidency” (lithograph below it), “Return from Hunting: the Halt in the Woods: a Scene near Chateaugay Lake, Franklin County, N. Y” and “With Great Care” (both of these images are of Tait’s original oil paintings, no lithographs were ever made of these two works), “Winter Sports: Trout Fishing on Chateaugay Lake” (lithograph below it), and last, on the far right is the lithograph of “Sugaring Off: Forest Scene in Early Spring” (We were unable to find an image of Tait’s original oil painting of this scene, only the lithograph. The original oil is most likely in a private collection somewhere.)</p>
+
+<p>I have been continuing my research on Tait and believe I have come upon one more of his scenes from the Lakes. More on that painting shortly…</p>
+
+<p>Tait was unusual, some might call him eccentric, in his approach to his paintings. He is known to have painted several versions of the same scene. For example, there is one work of two men in a canoe entitled “Deer Driving-A Good Chance” (and other variations of the title), that he painted twelve different versions of—each subtly different from the other. He was also known to have done preliminary sketches of scenes but not to have done a completed painting until several years later.</p>
+
+<p>Some of his works were reproduced as lithographs by Currier and Ives and some were not. The lithograph could be very true to the painted image or it could be an interpretation of his work with dramatic changes in scene, tone, and content. The framed scenes in our exhibit clearly show the differences between his paintings and the lithographic prints. And, sometimes, Currier and Ives produced several lithographic versions of the same scene. They also reproduced some of their lithographs with noticeable differences in color or tinting.</p>
+
+<p>One of my favorite Tait paintings is not set at the lakes but I wanted to share it here. This work was painted in the mid-1870s and his notes never identified its inspiration nor location. This original oil painting of freshly caught Brook (or Speckled) trout and the subsequent lithographs done of it have always appealed to me.</p> 
+
+<p>Following the photo of the wall of our exhibit in this post, is a group of images that show his original trout painting, followed by three versions of the same scene done by Currier and Ives. In one case, they only changed the color tint from lithograph to lithograph, and in the other, they changed up the images of the trout, keeping a sense of the original image composition but making the fish look quite different.</p> 
+
+<p>Incidentally, this trout image is thought to have been the last painting Tait allowed Currier and Ives to lithograph, as he had come to believe that the availability of the lithographic versions was devaluing his original works.</p>
+
+<p>Now back to Chateaugay Lake… The last group of images above were done in the early to mid-1850s, when Tait was staying at the Bellows House. They are set in the lakes area. The first three images appear to be exactly the same. However, when examined closely, they all have subtle differences; there is a slight change in the man’s features in some of the three and, if you look at the dead tree tops at the left center of the three images, you can see small differences in the way he painted the branches. These images were all entitled: “A Hunter’s Dilemma” and were painted between 1851 and 1853. Then, in 1854, he took the theme of the first three versions and changed it up. He retitled it “Huntsman with Deer, Horse and Rifle” and set his hunter in much the same setting; with a deer on a rock face, but with a horse for transportation instead of the hunter seemingly being on foot in the other versions. All four of these variations were oil on canvas paintings but the last was larger than the first three. The respective sizes were: 31” x 44”, 34” x 44”, 35’ x 45” and 44” x 54”.</p>
+
+<p>In any event, I believe this final scene (or scenes) were set at Chateaugay Lake. So, whether looking at one of the versions of “A Hunter’s Dilemma” or at “A Huntsman with Deer, Horse and Rifle”, you are looking at what, I think, becomes the eighth Tait work set in the Chateaugay Lakes area.</p>
+
+<p>AF Tait was a prolific artist with a wide range of preferred subjects, from hunting and fishing scenes, to landscapes, game animals, farm animals, and images of the west (where he also spent much time over the years).</p> 
+
+<p>The British-born Tait became an American citizen and embraced the availability of natural-world imagery his new homeland had to offer.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>2022 Update - Newsletter & Summer Exhibit</h2>
       <hr>
       <h5>March 12, 2022 | Mick Jarvis</h5>
@@ -84,21 +195,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -127,7 +238,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>2022 Update - Newsletter & Summer Exhibit</h2>
@@ -141,27 +252,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -195,7 +306,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>CCS 2021 Pearl Harbor Exhibit</h2>
@@ -209,63 +320,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -284,7 +395,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Gates Hoit Map</h2>
@@ -298,21 +409,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -336,7 +447,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Reopening, Newsletter, Exhibits and More!</h2>
@@ -350,15 +461,15 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-05-18_chsupdate/chsupdate2_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -392,7 +503,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Historical Society Update</h2>
@@ -406,63 +517,63 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
 </div>
 <br>
 
@@ -508,7 +619,7 @@ To keep you all informed, here are some of the activities we have worked on over
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [July 15, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [August 30, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
