--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,117 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>2022 Exhibit Addendum: Arthur F. Tait, Artist</h2>
+      <hr>
+      <h5>August 26, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 9</div>
+    <img src="blog/imgs/2022-08-26_exhibitaddendum-aftait/exhibitaddendum-aftait_09.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>As many of you know, the Historical Society’s summer exhibit, “Early Chateaugay Lake”, is currently on display each Wednesday and Saturday morning from 9:00am until noon in the Archival Center in the Town Hall. We have been gratified by the large numbers of folks who have stopped in and offered kind words for our efforts.</p>
+
+<p>We have covered several topics, including: the Natural History of the Lakes, the Native American presence on the Sand Bar and Indian Point, Early Schools, Early Transportation Development, The Bellows House (later the Banner House), the Earliest Settlers and more.</p>
+
+<p>One of the larger parts of the display are the paintings and lithographs of scenes captured by Arthur Fitzwilliam Tait that are set in the area around the Upper and Lower Lakes (see the first photo above).</p>
+
+<p>Tait did hundreds of paintings throughout his long career. Many were done when he was a guest at the Bellows House (later the Banner House) each summer from 1851 to 1855. The seven shown in our exhibit were always identified as being set in the Lakes area.</p> 
+
+<p>As shown in the exhibit and in the photo, they are from left to right: “A Second Shot: Still Hunting in the First Snow in the Chateaugay Forest” (lithograph below it), “A Tight Fix” (lithograph below it), “Arguing the Point—Settling the Presidency” (lithograph below it), “Return from Hunting: the Halt in the Woods: a Scene near Chateaugay Lake, Franklin County, N. Y” and “With Great Care” (both of these images are of Tait’s original oil paintings, no lithographs were ever made of these two works), “Winter Sports: Trout Fishing on Chateaugay Lake” (lithograph below it), and last, on the far right is the lithograph of “Sugaring Off: Forest Scene in Early Spring” (We were unable to find an image of Tait’s original oil painting of this scene, only the lithograph. The original oil is most likely in a private collection somewhere.)</p>
+
+<p>I have been continuing my research on Tait and believe I have come upon one more of his scenes from the Lakes. More on that painting shortly…</p>
+
+<p>Tait was unusual, some might call him eccentric, in his approach to his paintings. He is known to have painted several versions of the same scene. For example, there is one work of two men in a canoe entitled “Deer Driving-A Good Chance” (and other variations of the title), that he painted twelve different versions of—each subtly different from the other. He was also known to have done preliminary sketches of scenes but not to have done a completed painting until several years later.</p>
+
+<p>Some of his works were reproduced as lithographs by Currier and Ives and some were not. The lithograph could be very true to the painted image or it could be an interpretation of his work with dramatic changes in scene, tone, and content. The framed scenes in our exhibit clearly show the differences between his paintings and the lithographic prints. And, sometimes, Currier and Ives produced several lithographic versions of the same scene. They also reproduced some of their lithographs with noticeable differences in color or tinting.</p>
+
+<p>One of my favorite Tait paintings is not set at the lakes but I wanted to share it here. This work was painted in the mid-1870s and his notes never identified its inspiration nor location. This original oil painting of freshly caught Brook (or Speckled) trout and the subsequent lithographs done of it have always appealed to me.</p> 
+
+<p>Following the photo of the wall of our exhibit in this post, is a group of images that show his original trout painting, followed by three versions of the same scene done by Currier and Ives. In one case, they only changed the color tint from lithograph to lithograph, and in the other, they changed up the images of the trout, keeping a sense of the original image composition but making the fish look quite different.</p> 
+
+<p>Incidentally, this trout image is thought to have been the last painting Tait allowed Currier and Ives to lithograph, as he had come to believe that the availability of the lithographic versions was devaluing his original works.</p>
+
+<p>Now back to Chateaugay Lake… The last group of images above were done in the early to mid-1850s, when Tait was staying at the Bellows House. They are set in the lakes area. The first three images appear to be exactly the same. However, when examined closely, they all have subtle differences; there is a slight change in the man’s features in some of the three and, if you look at the dead tree tops at the left center of the three images, you can see small differences in the way he painted the branches. These images were all entitled: “A Hunter’s Dilemma” and were painted between 1851 and 1853. Then, in 1854, he took the theme of the first three versions and changed it up. He retitled it “Huntsman with Deer, Horse and Rifle” and set his hunter in much the same setting; with a deer on a rock face, but with a horse for transportation instead of the hunter seemingly being on foot in the other versions. All four of these variations were oil on canvas paintings but the last was larger than the first three. The respective sizes were: 31” x 44”, 34” x 44”, 35’ x 45” and 44” x 54”.</p>
+
+<p>In any event, I believe this final scene (or scenes) were set at Chateaugay Lake. So, whether looking at one of the versions of “A Hunter’s Dilemma” or at “A Huntsman with Deer, Horse and Rifle”, you are looking at what, I think, becomes the eighth Tait work set in the Chateaugay Lakes area.</p>
+
+<p>AF Tait was a prolific artist with a wide range of preferred subjects, from hunting and fishing scenes, to landscapes, game animals, farm animals, and images of the west (where he also spent much time over the years).</p> 
+
+<p>The British-born Tait became an American citizen and embraced the availability of natural-world imagery his new homeland had to offer.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Excelsior Mills Addendum</h2>
       <hr>
       <h5>July 12, 2022 | Mick Jarvis</h5>
@@ -84,21 +195,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-07-12_excelsioraddendum/excelsioraddendum_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -125,7 +236,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Remembering William Cullen</h2>
@@ -139,15 +250,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2022-06-15_cullen-william/cullen-william_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -162,69 +273,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Population Changes in Chateaugay</h2>
-      <hr>
-      <h5>April 24, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_02.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Just looking through the 2020 US Census data for Chateaugay…</p>
-
-<p>Village population was recorded as 735. That is down from 833 in 2010 (a 12.4% decrease).
-The entire Town's population was recorded as 1,743. That is down from 2,155 in 2010 (a 19% drop).
-</p>
-
-<p><b>A FEW NOTES:</b></p>
-
-<p>The population decreases since 2010 are not particularly surprising in light of lower resident numbers throughout the entire North Country.</p>
-
-<p>735 residents represents the Village's lowest number of residents since 1880. The village was incorporated in 1868 with an estimated population of 1100. It was at its largest in 1920, when 1291 people lived inside the Village limits.</p>
-
-<p>The 19% drop in the Town's population is deceptive. For the 2010 count, the Correctional Facility in Chateaugay was operating with approximately 250 inmates counted in the 2010 total. The facility, which was opened in 1990 as a drug treatment facility, was closed on July 24, 2014. Therefore, the 2020 count shows the loss of the inmate numbers (which inflates the percentage of the decrease) but also represents an additional, approximate population drop of 160 local residents.</p>
-
-<p>The Town's largest population ever, was in 1850 when 3,728 residents were counted in the Census. That coincided with the opening of the Northern Railroad (later known as the Ogdensburg and Lake Champlain RR, and later, as the Rutland RR). The 30 years following the opening of the train route represented Chateaugay's heyday as the economic fallout from the railroad led to a time of increased business activity and rising employment opportunities. At one time, the Chateaugay freight depot was the busiest on the entire line which stretched from Ogdensburg to Rouses Point.</p>
-
-<p>Above are images of the village and surrounding area. The first is from an 1876 map. The second is from Google Earth in 2022.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [July 15, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [August 30, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
